wownero_libwallet2_api_c/src/main/cpp/wownero_wallet2_api_c.h

//     virtual void statusWithErrorString(int& status, std::string& errorString) const = 0;
//     virtual bool setPassword(const std::string &password) = 0;
extern ADDAPI bool WOWNERO_Wallet_setPassword(void* wallet_ptr, const char* password);
//     virtual const std::string& getPassword() const = 0;
extern ADDAPI const char* WOWNERO_Wallet_getPassword(void* wallet_ptr);
//     virtual bool setDevicePin(const std::string &pin) { (void)pin; return false; };
extern ADDAPI bool WOWNERO_Wallet_setDevicePin(void* wallet_ptr, const char* pin);
//     virtual bool setDevicePassphrase(const std::string &passphrase) { (void)passphrase; return false; };
extern ADDAPI bool WOWNERO_Wallet_setDevicePassphrase(void* wallet_ptr, const char* passphrase);
//     virtual std::string address(uint32_t accountIndex = 0, uint32_t addressIndex = 0) const = 0;
extern ADDAPI const char* WOWNERO_Wallet_address(void* wallet_ptr, uint64_t accountIndex, uint64_t addressIndex);
//     std::string mainAddress() const { return address(0, 0); }
//     virtual std::string path() const = 0;
extern ADDAPI const char* WOWNERO_Wallet_path(void* wallet_ptr);
//     virtual NetworkType nettype() const = 0;
extern ADDAPI int WOWNERO_Wallet_nettype(void* wallet_ptr);
//     bool mainnet() const { return nettype() == MAINNET; }
//     bool testnet() const { return nettype() == TESTNET; }
//     bool stagenet() const { return nettype() == STAGENET; }
//     virtual void hardForkInfo(uint8_t &version, uint64_t &earliest_height) const = 0;
//     virtual bool useForkRules(uint8_t version, int64_t early_blocks) const = 0;  
extern ADDAPI uint8_t WOWNERO_Wallet_useForkRules(void* wallet_ptr, uint8_t version, int64_t early_blocks);
//     virtual std::string integratedAddress(const std::string &payment_id) const = 0;
extern ADDAPI const char* WOWNERO_Wallet_integratedAddress(void* wallet_ptr, const char* payment_id);
//     virtual std::string secretViewKey() const = 0;
extern ADDAPI const char* WOWNERO_Wallet_secretViewKey(void* wallet_ptr);
//     virtual std::string publicViewKey() const = 0;
extern ADDAPI const char* WOWNERO_Wallet_publicViewKey(void* wallet_ptr);
//     virtual std::string secretSpendKey() const = 0;
extern ADDAPI const char* WOWNERO_Wallet_secretSpendKey(void* wallet_ptr);
//     virtual std::string publicSpendKey() const = 0;
extern ADDAPI const char* WOWNERO_Wallet_publicSpendKey(void* wallet_ptr);
//     virtual std::string publicMultisigSignerKey() const = 0;
extern ADDAPI const char* WOWNERO_Wallet_publicMultisigSignerKey(void* wallet_ptr);
//     virtual void stop() = 0;
extern ADDAPI void WOWNERO_Wallet_stop(void* wallet_ptr);
//     virtual bool store(const std::string &path) = 0;
extern ADDAPI bool WOWNERO_Wallet_store(void* wallet_ptr, const char* path);
//     virtual std::string filename() const = 0;
extern ADDAPI const char* WOWNERO_Wallet_filename(void* wallet_ptr);
//     virtual std::string keysFilename() const = 0;
extern ADDAPI const char* WOWNERO_Wallet_keysFilename(void* wallet_ptr);
//     virtual bool init(const std::string &daemon_address, uint64_t upper_transaction_size_limit = 0, const std::string &daemon_username = "", const std::string &daemon_password = "", bool use_ssl = false, bool lightWallet = false, const std::string &proxy_address = "") = 0;
extern ADDAPI bool WOWNERO_Wallet_init(void* wallet_ptr, const char* daemon_address, uint64_t upper_transaction_size_limit, const char* daemon_username, const char* daemon_password, bool use_ssl, bool lightWallet, const char* proxy_address);
//     virtual bool createWatchOnly(const std::string &path, const std::string &password, const std::string &language) const = 0;
extern ADDAPI bool WOWNERO_Wallet_createWatchOnly(void* wallet_ptr, const char* path, const char* password, const char* language);
//     virtual void setRefreshFromBlockHeight(uint64_t refresh_from_block_height) = 0;
extern ADDAPI void WOWNERO_Wallet_setRefreshFromBlockHeight(void* wallet_ptr, uint64_t refresh_from_block_height);