impls/monero.dart/lib/src/generated_bindings_wownero.g.dart


  late final _WOWNERO_Wallet_setPasswordPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>)>>('WOWNERO_Wallet_setPassword');
  late final _WOWNERO_Wallet_setPassword =
      _WOWNERO_Wallet_setPasswordPtr.asFunction<
          bool Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> WOWNERO_Wallet_getPassword(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _WOWNERO_Wallet_getPassword(
      wallet_ptr,
    );
  }

  late final _WOWNERO_Wallet_getPasswordPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('WOWNERO_Wallet_getPassword');
  late final _WOWNERO_Wallet_getPassword = _WOWNERO_Wallet_getPasswordPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  bool WOWNERO_Wallet_setDevicePin(
    ffi.Pointer<ffi.Void> wallet_ptr,
    ffi.Pointer<ffi.Char> pin,
  ) {
    return _WOWNERO_Wallet_setDevicePin(
      wallet_ptr,
      pin,
    );
  }

  late final _WOWNERO_Wallet_setDevicePinPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>)>>('WOWNERO_Wallet_setDevicePin');
  late final _WOWNERO_Wallet_setDevicePin =
      _WOWNERO_Wallet_setDevicePinPtr.asFunction<
          bool Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  bool WOWNERO_Wallet_setDevicePassphrase(
    ffi.Pointer<ffi.Void> wallet_ptr,
    ffi.Pointer<ffi.Char> passphrase,
  ) {
    return _WOWNERO_Wallet_setDevicePassphrase(
      wallet_ptr,
      passphrase,
    );
  }

  late final _WOWNERO_Wallet_setDevicePassphrasePtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>)>>('WOWNERO_Wallet_setDevicePassphrase');
  late final _WOWNERO_Wallet_setDevicePassphrase =
      _WOWNERO_Wallet_setDevicePassphrasePtr.asFunction<
          bool Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> WOWNERO_Wallet_address(
    ffi.Pointer<ffi.Void> wallet_ptr,
    int accountIndex,
    int addressIndex,
  ) {
    return _WOWNERO_Wallet_address(
      wallet_ptr,
      accountIndex,
      addressIndex,
    );
  }

  late final _WOWNERO_Wallet_addressPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>, ffi.Uint64,
              ffi.Uint64)>>('WOWNERO_Wallet_address');
  late final _WOWNERO_Wallet_address = _WOWNERO_Wallet_addressPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>, int, int)>();

  ffi.Pointer<ffi.Char> WOWNERO_Wallet_path(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _WOWNERO_Wallet_path(
      wallet_ptr,
    );
  }

  late final _WOWNERO_Wallet_pathPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('WOWNERO_Wallet_path');
  late final _WOWNERO_Wallet_path = _WOWNERO_Wallet_pathPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  int WOWNERO_Wallet_nettype(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _WOWNERO_Wallet_nettype(
      wallet_ptr,
    );
  }

  late final _WOWNERO_Wallet_nettypePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
          'WOWNERO_Wallet_nettype');
  late final _WOWNERO_Wallet_nettype = _WOWNERO_Wallet_nettypePtr.asFunction<
      int Function(ffi.Pointer<ffi.Void>)>();

  int WOWNERO_Wallet_useForkRules(
    ffi.Pointer<ffi.Void> wallet_ptr,
    int version,
    int early_blocks,
  ) {
    return _WOWNERO_Wallet_useForkRules(
      wallet_ptr,
      version,
      early_blocks,
    );
  }

  late final _WOWNERO_Wallet_useForkRulesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint8 Function(ffi.Pointer<ffi.Void>, ffi.Uint8,
              ffi.Int64)>>('WOWNERO_Wallet_useForkRules');
  late final _WOWNERO_Wallet_useForkRules = _WOWNERO_Wallet_useForkRulesPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>, int, int)>();

  ffi.Pointer<ffi.Char> WOWNERO_Wallet_integratedAddress(
    ffi.Pointer<ffi.Void> wallet_ptr,
    ffi.Pointer<ffi.Char> payment_id,
  ) {
    return _WOWNERO_Wallet_integratedAddress(
      wallet_ptr,
      payment_id,
    );
  }

  late final _WOWNERO_Wallet_integratedAddressPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>)>>('WOWNERO_Wallet_integratedAddress');
  late final _WOWNERO_Wallet_integratedAddress =
      _WOWNERO_Wallet_integratedAddressPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> WOWNERO_Wallet_secretViewKey(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _WOWNERO_Wallet_secretViewKey(
      wallet_ptr,
    );
  }

  late final _WOWNERO_Wallet_secretViewKeyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('WOWNERO_Wallet_secretViewKey');
  late final _WOWNERO_Wallet_secretViewKey = _WOWNERO_Wallet_secretViewKeyPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> WOWNERO_Wallet_publicViewKey(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _WOWNERO_Wallet_publicViewKey(
      wallet_ptr,
    );
  }

  late final _WOWNERO_Wallet_publicViewKeyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('WOWNERO_Wallet_publicViewKey');
  late final _WOWNERO_Wallet_publicViewKey = _WOWNERO_Wallet_publicViewKeyPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> WOWNERO_Wallet_secretSpendKey(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _WOWNERO_Wallet_secretSpendKey(
      wallet_ptr,
    );
  }

  late final _WOWNERO_Wallet_secretSpendKeyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('WOWNERO_Wallet_secretSpendKey');
  late final _WOWNERO_Wallet_secretSpendKey = _WOWNERO_Wallet_secretSpendKeyPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> WOWNERO_Wallet_publicSpendKey(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _WOWNERO_Wallet_publicSpendKey(
      wallet_ptr,
    );
  }

  late final _WOWNERO_Wallet_publicSpendKeyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('WOWNERO_Wallet_publicSpendKey');
  late final _WOWNERO_Wallet_publicSpendKey = _WOWNERO_Wallet_publicSpendKeyPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> WOWNERO_Wallet_publicMultisigSignerKey(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _WOWNERO_Wallet_publicMultisigSignerKey(
      wallet_ptr,
    );
  }

  late final _WOWNERO_Wallet_publicMultisigSignerKeyPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>>(
      'WOWNERO_Wallet_publicMultisigSignerKey');
  late final _WOWNERO_Wallet_publicMultisigSignerKey =
      _WOWNERO_Wallet_publicMultisigSignerKeyPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  void WOWNERO_Wallet_stop(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _WOWNERO_Wallet_stop(
      wallet_ptr,
    );
  }

  late final _WOWNERO_Wallet_stopPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'WOWNERO_Wallet_stop');
  late final _WOWNERO_Wallet_stop = _WOWNERO_Wallet_stopPtr.asFunction<
      void Function(ffi.Pointer<ffi.Void>)>();

  bool WOWNERO_Wallet_store(
    ffi.Pointer<ffi.Void> wallet_ptr,
    ffi.Pointer<ffi.Char> path,
  ) {
    return _WOWNERO_Wallet_store(
      wallet_ptr,
      path,
    );
  }

  late final _WOWNERO_Wallet_storePtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>)>>('WOWNERO_Wallet_store');
  late final _WOWNERO_Wallet_store = _WOWNERO_Wallet_storePtr.asFunction<
      bool Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> WOWNERO_Wallet_filename(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _WOWNERO_Wallet_filename(
      wallet_ptr,
    );
  }

  late final _WOWNERO_Wallet_filenamePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('WOWNERO_Wallet_filename');
  late final _WOWNERO_Wallet_filename = _WOWNERO_Wallet_filenamePtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> WOWNERO_Wallet_keysFilename(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _WOWNERO_Wallet_keysFilename(
      wallet_ptr,
    );
  }

  late final _WOWNERO_Wallet_keysFilenamePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('WOWNERO_Wallet_keysFilename');
  late final _WOWNERO_Wallet_keysFilename = _WOWNERO_Wallet_keysFilenamePtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  bool WOWNERO_Wallet_init(
    ffi.Pointer<ffi.Void> wallet_ptr,
    ffi.Pointer<ffi.Char> daemon_address,
    int upper_transaction_size_limit,
    ffi.Pointer<ffi.Char> daemon_username,
    ffi.Pointer<ffi.Char> daemon_password,
    bool use_ssl,
    bool lightWallet,
    ffi.Pointer<ffi.Char> proxy_address,
  ) {
    return _WOWNERO_Wallet_init(
      wallet_ptr,
      daemon_address,
      upper_transaction_size_limit,
      daemon_username,
      daemon_password,
      use_ssl,
      lightWallet,
      proxy_address,
    );
  }

  late final _WOWNERO_Wallet_initPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>,
              ffi.Uint64,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Bool,
              ffi.Bool,
              ffi.Pointer<ffi.Char>)>>('WOWNERO_Wallet_init');
  late final _WOWNERO_Wallet_init = _WOWNERO_Wallet_initPtr.asFunction<
      bool Function(
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          bool,
          bool,
          ffi.Pointer<ffi.Char>)>();

  bool WOWNERO_Wallet_createWatchOnly(
    ffi.Pointer<ffi.Void> wallet_ptr,
    ffi.Pointer<ffi.Char> path,
    ffi.Pointer<ffi.Char> password,
    ffi.Pointer<ffi.Char> language,
  ) {
    return _WOWNERO_Wallet_createWatchOnly(
      wallet_ptr,
      path,
      password,
      language,
    );
  }

  late final _WOWNERO_Wallet_createWatchOnlyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('WOWNERO_Wallet_createWatchOnly');
  late final _WOWNERO_Wallet_createWatchOnly =
      _WOWNERO_Wallet_createWatchOnlyPtr.asFunction<
          bool Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void WOWNERO_Wallet_setRefreshFromBlockHeight(
    ffi.Pointer<ffi.Void> wallet_ptr,
    int refresh_from_block_height,
  ) {
    return _WOWNERO_Wallet_setRefreshFromBlockHeight(
      wallet_ptr,
      refresh_from_block_height,
    );
  }
